--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -82,6 +82,7 @@
     "title": "ขอเอกสาร - ระบบขอเอกสารออนไลน์",
     "header": "ขอเอกสาร",
     "documentType": "ประเภทเอกสาร",
+    "documentName": "ชื่อเอกสาร",
     "selectDocumentType": "เลือกประเภทเอกสาร",
     "deliveryMethod": "วิธีการรับเอกสาร",
     "pickup": "รับด้วยตนเอง",
