--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -83,6 +83,10 @@
     "header": "申请文件",
     "documentType": "文件类型",
     "documentName": "文件名称",
+    "unitPrice": "单价",
+    "quantity": "数量",
+    "subtotal": "小计",
+    "documentSubtotal": "文件小计:",
     "selectDocumentType": "选择文件类型",
     "deliveryMethod": "接收方式",
     "pickup": "自取",
