--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -83,6 +83,10 @@
     "header": "Request Document",
     "documentType": "Document Type",
     "documentName": "Document Name",
+    "unitPrice": "Unit Price",
+    "quantity": "Quantity",
+    "subtotal": "Subtotal",
+    "documentSubtotal": "Document Subtotal:",
     "selectDocumentType": "Select document type",
     "deliveryMethod": "Delivery Method",
     "pickup": "Pickup",
