--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -83,6 +83,10 @@
     "header": "ขอเอกสาร",
     "documentType": "ประเภทเอกสาร",
     "documentName": "ชื่อเอกสาร",
+    "unitPrice": "ราคาต่อชิ้น",
+    "quantity": "จำนวน",
+    "subtotal": "รวม",
+    "documentSubtotal": "ราคาเอกสารรวม:",
     "selectDocumentType": "เลือกประเภทเอกสาร",
     "deliveryMethod": "วิธีการรับเอกสาร",
     "pickup": "รับด้วยตนเอง",
