--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -94,7 +94,7 @@
     "mail": "รับทางไปรษณีย์",
     "address": "ที่อยู่สำหรับจัดส่ง",
     "addressPlaceholder": "กรอกรายละเอียดที่อยู่สำหรับจัดส่ง",
-    "urgent": "บริการเร่งด่วน (เพิ่ม 50 บาท)",
+    "urgent": "บริการเร่งด่วน (เพิ่ม 50 บาทต่อฉบับ)",
     "urgentLabel": "เร่งด่วน",
     "paymentSlip": "หลักฐานการชำระเงิน",
     "paymentSlipInfo": "อัปโหลดสลิปหรือหลักฐานการชำระเงิน (ไฟล์ภาพหรือ PDF)",
