--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -152,6 +152,7 @@
   "requestDetail": {
     "title": "รายละเอียดคำขอ - ระบบขอเอกสารออนไลน์",
     "header": "รายละเอียดคำขอเอกสาร",
+    "quantity": "จำนวน",
     "backToList": "กลับไปยังรายการคำขอ",
     "requestInfo": "ข้อมูลคำขอ",
     "requestID": "รหัสคำขอ",
