--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -147,7 +147,9 @@
     "ready": "พร้อมจัดส่ง/รับเอกสาร",
     "completed": "เสร็จสิ้น",
     "rejected": "ถูกปฏิเสธ",
-    "noRequests": "ไม่พบคำขอเอกสารที่ตรงกับเงื่อนไข"
+    "noRequests": "ไม่พบคำขอเอกสารที่ตรงกับเงื่อนไข",
+    "multipleDocuments": "หลายรายการ",
+    "items": "รายการ"
   },
   "requestDetail": {
     "title": "รายละเอียดคำขอ - ระบบขอเอกสารออนไลน์",
@@ -170,7 +172,16 @@
     "statusHistory": "ประวัติสถานะ",
     "date": "วันที่",
     "statusValue": "สถานะ",
-    "statusNote": "หมายเหตุ"
+    "statusNote": "หมายเหตุ",
+    "documentSubtotal": "รวมค่าเอกสาร",
+    "shippingFee": "ค่าจัดส่ง",
+    "urgentFee": "ค่าบริการเร่งด่วน",
+    "totalPrice": "ราคารวมทั้งหมด",
+    "unitPrice": "ราคาต่อชิ้น",
+    "subtotal": "รวม",
+    "viewPaymentSlip": "ดูหลักฐานการชำระเงิน",
+    "noPaymentSlip": "ยังไม่มีหลักฐานการชำระเงิน",
+    "noHistory": "ไม่มีประวัติการเปลี่ยนแปลงสถานะ"
   },
   "admin": {
     "dashboard": {
@@ -209,6 +220,16 @@
       "statusNote": "หมายเหตุ (ถ้ามี)",
       "updateButton": "อัปเดต"
     },
+     "statusInfo": {
+    "pending": "คำขอของคุณอยู่ระหว่างรอการดำเนินการ โปรดรอการตรวจสอบจากเจ้าหน้าที่",
+    "pendingNoPayment": " กรุณาอัปโหลดหลักฐานการชำระเงินเพื่อดำเนินการต่อ",
+    "processing": "คำขอของคุณกำลังอยู่ระหว่างการดำเนินการ เจ้าหน้าที่กำลังจัดเตรียมเอกสารให้คุณ",
+    "readyPickup": "เอกสารของคุณพร้อมให้รับแล้ว กรุณาติดต่อรับเอกสารได้ที่สำนักทะเบียนและประมวลผล ชั้น 1 อาคารอำนวยการ",
+    "readyMail": "เอกสารของคุณพร้อมสำหรับจัดส่งแล้ว และจะถูกจัดส่งไปยังที่อยู่ที่คุณระบุไว้ในไม่ช้า",
+    "completedPickup": "คำขอของคุณเสร็จสิ้นแล้ว คุณได้รับเอกสารเรียบร้อยแล้ว",
+    "completedMail": "คำขอของคุณเสร็จสิ้นแล้ว เอกสารถูกจัดส่งไปยังที่อยู่ที่คุณระบุไว้เรียบร้อยแล้ว",
+    "rejected": "คำขอของคุณถูกปฏิเสธ โปรดติดต่อเจ้าหน้าที่เพื่อขอข้อมูลเพิ่มเติม"
+  },
     "users": {
       "title": "จัดการผู้ใช้ - ระบบขอเอกสารออนไลน์",
       "header": "จัดการผู้ใช้",
