--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -184,6 +184,34 @@
     "noHistory": "ไม่มีประวัติการเปลี่ยนแปลงสถานะ"
   },
   "admin": {
+    "userDetail": {
+      "title": "รายละเอียดผู้ใช้ - ระบบขอเอกสารออนไลน์",
+      "header": "รายละเอียดผู้ใช้",
+      "backToList": "กลับไปยังรายการผู้ใช้",
+      "userInfo": "ข้อมูลผู้ใช้",
+      "requestHistory": "ประวัติการขอเอกสาร",
+      "statistics": "สถิติการใช้งาน",
+      "totalRequests": "คำขอทั้งหมด",
+      "completedRequests": "เสร็จสิ้น",
+      "pendingRequests": "รอดำเนินการ",
+      "totalSpent": "ค่าใช้จ่ายรวม",
+      "actions": "การดำเนินการ",
+      "resetPassword": "รีเซ็ตรหัสผ่าน",
+      "suspendUser": "ระงับผู้ใช้",
+      "activateUser": "เปิดใช้งานผู้ใช้",
+      "deleteUser": "ลบผู้ใช้",
+      "confirmDelete": "ยืนยันการลบผู้ใช้",
+      "deleteWarning": "คำเตือน!",
+      "deleteMessage": "การลบผู้ใช้นี้จะลบข้อมูลทั้งหมดของผู้ใช้รวมถึงประวัติการขอเอกสาร การดำเนินการนี้ไม่สามารถยกเลิกได้",
+      "userToDelete": "ผู้ใช้ที่จะลบ",
+      "typeConfirm": "พิมพ์ \"DELETE\" เพื่อยืนยัน",
+      "cancel": "ยกเลิก",
+      "confirmDeleteBtn": "ลบผู้ใช้",
+      "resetPasswordMessage": "คุณต้องการรีเซ็ตรหัสผ่านของผู้ใช้นี้หรือไม่?",
+      "newPasswordInfo": "รหัสผ่านใหม่จะถูกตั้งเป็น: 123456",
+      "resetPasswordNote": "ผู้ใช้ควรเปลี่ยนรหัสผ่านใหม่หลังจากเข้าสู่ระบบ",
+      "confirmReset": "ยืนยันการรีเซ็ต"
+    },
     "dashboard": {
       "title": "จัดการระบบ - ระบบขอเอกสารออนไลน์",
       "header": "จัดการระบบ",
