--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -194,6 +194,34 @@
     "rejected": "Your request has been rejected. Please contact staff for more information."
   },
   "admin": {
+    "userDetail": {
+      "title": "User Details - Document Request System",
+      "header": "User Details",
+      "backToList": "Back to User List",
+      "userInfo": "User Information",
+      "requestHistory": "Request History",
+      "statistics": "Usage Statistics",
+      "totalRequests": "Total Requests",
+      "completedRequests": "Completed",
+      "pendingRequests": "Pending",
+      "totalSpent": "Total Spent",
+      "actions": "Actions",
+      "resetPassword": "Reset Password",
+      "suspendUser": "Suspend User",
+      "activateUser": "Activate User",
+      "deleteUser": "Delete User",
+      "confirmDelete": "Confirm User Deletion",
+      "deleteWarning": "Warning!",
+      "deleteMessage": "Deleting this user will remove all user data including document request history. This action cannot be undone.",
+      "userToDelete": "User to delete",
+      "typeConfirm": "Type \"DELETE\" to confirm",
+      "cancel": "Cancel",
+      "confirmDeleteBtn": "Delete User",
+      "resetPasswordMessage": "Do you want to reset this user's password?",
+      "newPasswordInfo": "New password will be set to: 123456",
+      "resetPasswordNote": "User should change password after login",
+      "confirmReset": "Confirm Reset"
+    },
     "dashboard": {
       "title": "Admin Panel - Document Request System",
       "header": "Admin Panel",
