--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -112,7 +112,7 @@
     "urgentService": "Urgent Service",
     "qrAmount": "Amount",
     "selectFile": "Choose File",
-    "bankNameValue": "Krung Thai Bank",
+    "bankNameValue": "Bangkok Bank",
     "accountNameValue": "North Bangkok University"
   },
   "dashboard": {
