--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -112,7 +112,7 @@
     "urgentService": "加急服务",
     "qrAmount": "金额",
     "selectFile": "选择文件",
-    "bankNameValue": "泰京银行",
+    "bankNameValue": "曼谷银行",
     "accountNameValue": "北曼谷大学"
   },
   "dashboard": {
