--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -87,6 +87,7 @@
     "unitPrice": "单价",
     "quantity": "数量",
     "subtotal": "小计",
+    "noDocumentsSelected": "尚未选择任何文档",
     "documentSubtotal": "文件小计:",
     "selectDocumentType": "选择文件类型",
     "deliveryMethod": "接收方式",
