--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -88,6 +88,7 @@
     "quantity": "จำนวน",
     "subtotal": "รวม",
     "documentSubtotal": "ราคาเอกสารรวม:",
+    "noDocumentsSelected": "ยังไม่ได้เลือกเอกสาร",
     "selectDocumentType": "เลือกประเภทเอกสาร",
     "deliveryMethod": "วิธีการรับเอกสาร",
     "pickup": "รับด้วยตนเอง",
