--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -88,7 +88,7 @@
     "quantity": "Quantity",
     "subtotal": "Subtotal",
     "documentSubtotal": "Document Subtotal:",
-    "noDocumentsSelected": "No document has been selected yet.",
+    "noDocumentsSelected": "No documents selected yet",
     "selectDocumentType": "Select document type",
     "deliveryMethod": "Delivery Method",
     "pickup": "Pickup",
