--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -85,7 +85,7 @@
     "addDocument": "添加文件",
     "documentName": "文件名称",
     "unitPrice": "单价",
-    "currency": "THB",
+    "currency": "泰铢",
     "quantity": "数量",
     "subtotal": "小计",
     "noDocumentsSelected": "尚未选择任何文档",
