--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -232,7 +232,7 @@
       "reports": "รายงาน"
     },
     "requests": {
-      "title": "จัดการคำขอเอกสาร - ระบบขอเอกสารออนไลน์",
+      "title": "จัดการคำขอเอกสาร",
       "header": "จัดการคำขอเอกสาร",
       "searchPlaceholder": "ค้นหาคำขอเอกสาร...",
       "all": "ทั้งหมด",
@@ -266,7 +266,7 @@
     "rejected": "คำขอของคุณถูกปฏิเสธ โปรดติดต่อเจ้าหน้าที่เพื่อขอข้อมูลเพิ่มเติม"
   },
     "users": {
-      "title": "จัดการผู้ใช้ - ระบบขอเอกสารออนไลน์",
+      "title": "จัดการผู้ใช้",
       "header": "จัดการผู้ใช้",
       "searchPlaceholder": "ค้นหาผู้ใช้...",
       "addAdmin": "เพิ่มผู้ดูแลระบบ",
@@ -284,7 +284,7 @@
       "noUsers": "ไม่พบผู้ใช้ที่ตรงกับเงื่อนไข"
     },
     "reports": {
-      "title": "รายงาน - ระบบขอเอกสารออนไลน์",
+      "title": "รายงาน",
       "header": "รายงาน",
       "dateRange": "ช่วงวันที่",
       "startDate": "วันที่เริ่มต้น",
