--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -202,7 +202,7 @@
   },
   "admin": {
       "userDetail": {
-      "title": "用户详情 - 在线文件申请系统",
+      "title": "用户详情",
       "header": "用户详情",
       "backToList": "返回用户列表",
       "userInfo": "用户信息",
@@ -230,7 +230,7 @@
       "confirmReset": "确认重置"
     },
     "dashboard": {
-      "title": "管理面板 - 在线文件申请系统",
+      "title": "管理面板",
       "header": "管理面板",
       "totalRequests": "总申请数",
       "pendingRequests": "待处理",
@@ -242,7 +242,7 @@
       "reports": "报告"
     },
     "requests": {
-      "title": "申请管理 - 在线文件申请系统",
+      "title": "申请管理",
       "header": "申请管理",
       "searchPlaceholder": "搜索文件申请...",
       "all": "全部",
@@ -266,7 +266,7 @@
       "updateButton": "更新"
     },
     "users": {
-      "title": "用户管理 - 在线文件申请系统",
+      "title": "用户管理",
       "header": "用户管理",
       "searchPlaceholder": "搜索用户...",
       "addAdmin": "添加管理员",
@@ -284,7 +284,7 @@
       "noUsers": "未找到符合条件的用户"
     },
     "reports": {
-      "title": "报告 - 在线文件申请系统",
+      "title": "报告",
       "header": "报告",
       "dateRange": "日期范围",
       "startDate": "开始日期",
