--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -32,7 +32,7 @@
     "otherCertificates": "[T08] หนังสือรับรองรายวิชา",
     "Certificates9": "[T09] สำเนาใบปริญญาบัตร",
     "Certificates10": "[T10] หนังสือรับรองความประพฤติ",
-    "Certificates11": "[T11] หนังสือรับรองอื่น ๆ",
+    "Certificates11": "[T11] หนังสือรับรองอื่น ๆ"
   },
   "howTo": {
     "step1": "ลงทะเบียนหรือเข้าสู่ระบบ",
