--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -22,14 +22,17 @@
     "fees": "费用"
   },
   "documents": {
-    "transcript": "成绩单",
+    "transcript": "[E01] 成绩单 ",
     "studentCertificate": "学生证明",
     "expectedGraduationCertificate": "预计毕业证明",
     "graduationCertificate": "毕业证明",
     "courseCertificate": "课程证明",
     "degreeCertificate": "学位证书副本",
     "conductCertificate": "品行证明",
-    "otherCertificates": "其他证明"
+    "otherCertificates": "其他证明",
+    "Certificates9": "[E09] Copy of Degree Certificate ",
+    "Certificates10": "[E10] Certificate of Good Conduct ",
+    "Certificates11": "[E11] Other Certificates"
   },
   "howTo": {
     "step1": "注册或登录",
