--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -22,8 +22,8 @@
     "fees": "ค่าบริการ"
   },
   "documents": {
-    "transcript": "[T01] ใบแสดงผลการศึกษา  ฉบับกำลังศึกษา",
-    "studentCertificate": "[T02] ใบแสดงผลการศึกษา - ฉบับก่อนสภาอนุมัติสำเร็จการศึกษา",
+    "transcript": "[T01] ใบแสดงผลการศึกษา ฉบับกำลังศึกษา",
+    "studentCertificate": "[T02] ใบแสดงผลการศึกษา ฉบับก่อนสภาอนุมัติสำเร็จการศึกษา",
     "expectedGraduationCertificate": "[T03] ใบแสดงผลการศึกษา ฉบับหลังสภาอนุมัติปริญญา",
     "graduationCertificate": "[T04] หนังสือรับรองการเป็นนักศึกษา",
     "courseCertificate": "[T05] หนังสือรับรองคาดว่าจะสำเร็จการศึกษา",
