--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -22,7 +22,7 @@
     "fees": "Fees"
   },
   "documents": {
-    "transcript": "[E01] Transcript",
+    "transcript": "[E01] Transcript (Current Student Version)",
     "studentCertificate": "[E02] Provisional Transcript (Pending University Council Approval)",
     "expectedGraduationCertificate": "[E03] Official Transcript (Degree Conferred / Approved by University Council) ",
     "graduationCertificate": "[E04] Student Certificate",
