--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -73,6 +73,10 @@
     "phonePlaceholder": "输入您的电话号码",
     "faculty": "学院",
     "selectFaculty": "选择学院",
+    "birthDate": "出生日期",
+    "birthDatePlaceholder": "选择您的出生日期",
+    "idNumber": "身份证/护照号码",
+    "idNumberPlaceholder": "输入您的身份证或护照号码",
     "password": "密码",
     "passwordPlaceholder": "输入您的密码",
     "confirmPassword": "确认密码",
@@ -145,6 +149,8 @@
     "faculty": "学院",
     "email": "电子邮箱",
     "phone": "电话",
+    "birthDate": "出生日期",
+    "idNumber": "身份证/护照号码",
     "joinDate": "注册日期"
   },
   "status": {
@@ -278,6 +284,8 @@
       "email": "电子邮箱",
       "phone": "电话",
       "faculty": "学院",
+      "birthDate": "出生日期",
+      "idNumber": "身份证/护照号码",
       "role": "角色",
       "joinDate": "注册日期",
       "actions": "操作",
