--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,6 +9,7 @@
     "adminPanel": "Admin Panel",
     "login": "Login",
     "register": "Register",
+     "noAccount": "Don't have an account yet?<a href='register.html'>ลงทะเบียน</a>",
     "logout": "Logout"
   },
   "home": {
