--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -90,6 +90,7 @@
     "title": "ขอเอกสาร - ระบบขอเอกสารออนไลน์",
     "header": "ขอเอกสาร",
     "addDocument": "เพิ่มเอกสาร",
+    "cancel": "ยกเลิก",
     "documentType": "ประเภทเอกสาร",
     "documentName": "ชื่อเอกสาร",
     "unitPrice": "ราคาต่อชิ้น",
