--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -125,6 +125,7 @@
     "qrAmount": "จำนวนเงิน",
     "selectFile": "เลือกไฟล์",
     "bankNameValue": "ธนาคารกรุงเทพ",
+    "accountNumber": "134-5-567992",
     "accountNameValue": "มหาวิทยาลัยนอร์ทกรุงเทพ"
   },
   "dashboard": {
