--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -124,6 +124,7 @@
     "qrAmount": "Amount",
     "selectFile": "Choose File",
     "bankNameValue": "Bangkok Bank",
+    "accountNumber": "134-5-567992",
     "accountNameValue": "North Bangkok University"
   },
   "dashboard": {
