--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -124,6 +124,7 @@
     "qrAmount": "金额",
     "selectFile": "选择文件",
     "bankNameValue": "曼谷银行",
+    "accountNumber": "134-5-567992",
     "accountNameValue": "北曼谷大学"
   },
   "dashboard": {
