--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -101,7 +101,8 @@
     "selectDocumentForQR": "Select documents to generate QR Code",
     "selectDocumentType": "Select document type",
     "deliveryMethod": "Delivery Method",
-    "pickup": "Pickup",
+    "pickup": "Pickup (Registration Department, Sapanmai)",
+    "pickuprangsit": "Pickup (Registration Department, Rangsit)",
     "mail": "Mail",
     "address": "Shipping Address",
     "addressPlaceholder": "Enter your shipping address",
