--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -103,7 +103,7 @@
     "selectDocumentType": "เลือกประเภทเอกสาร",
     "deliveryMethod": "วิธีการรับเอกสาร",
     "pickup": "รับด้วยตนเอง (แผนกทะเบียน สะพานใหม่)",
-    "pickuprangsit": "รับด้วยตนเอง (แผนกทะเบียน รังสิต)",
+    "pickupRangsit": "รับด้วยตนเอง (แผนกทะเบียน รังสิต)",
     "mail": "รับทางไปรษณีย์",
     "address": "ที่อยู่สำหรับจัดส่ง",
     "addressPlaceholder": "กรอกรายละเอียดที่อยู่สำหรับจัดส่ง",
