--- a/public/locales/th.json
+++ b/public/locales/th.json
@@ -102,7 +102,7 @@
     "selectDocumentForQR": "เลือกเอกสารเพื่อสร้าง QR Code",
     "selectDocumentType": "เลือกประเภทเอกสาร",
     "deliveryMethod": "วิธีการรับเอกสาร",
-    "pickup": "รับด้วยตนเอง (แผนกทะเบียน สะพานใหม่)",
+    "pickup": "รับด้วยตนเอง",
     "pickupRangsit": "รับด้วยตนเอง (แผนกทะเบียน รังสิต)",
     "mail": "รับทางไปรษณีย์",
     "address": "ที่อยู่สำหรับจัดส่ง",
